added 7.1 support back in

--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
         }
     ],
     "require": {
-        "php": "^8.0",
+        "php": "^7.1|^8.0",
         "ext-dom": "*"
     },
     "require-dev": {
